fixing n+1 query to more efficient one.

--- a/app/views/zombies/index.html.erb
+++ b/app/views/zombies/index.html.erb
@@ -12,6 +12,7 @@
   <tr>
     <td><%= zombie.name %></td>
     <td><%= zombie.bio %></td>
+    <td><%= zombie.brain.flavour %></td>
     <td><%= link_to 'Show', zombie %></td>
     <td><%= link_to 'Edit', edit_zombie_path(zombie) %></td>
     <td><%= link_to 'Destroy', zombie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
